force-app/main/default/objects/IDENTITY_AuthProvider_Mapping__mdt/IDENTITY_AuthProvider_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>IDENTITY - AuthProvider Mapping</label>
    <pluralLabel>IDENTITY - AuthProvider Mappings</pluralLabel>
</CustomObject>