force-app/main/default/objects/IDENTITY_AuthProvider_Mapping__mdt/fields/AuthProvider__c.field-meta.xml
<CustomField>
    <fullName>AuthProvider__c</fullName>
    <label>AuthProvider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Facebook</fullName>
                <default>true</default>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>Kakao</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>WeChat_Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>