force-app/main/default/objects/IDENTITY_AuthProvider_Mapping__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>base_address</fullName>
            </value>
            <value>
                <fullName>birthdate_day</fullName>
            </value>
            <value>
                <fullName>birthdate_month</fullName>
            </value>
            <value>
                <fullName>birthdate_year</fullName>
            </value>
            <value>
                <fullName>calling_code</fullName>
                <default>true</default>
                <label>calling_code</label>
            </value>
            <value>
                <fullName>channel_opted_in</fullName>
            </value>
            <value>
                <fullName>connnected_at</fullName>
            </value>
            <value>
                <fullName>detail_address</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>email_verified</fullName>
            </value>
            <value>
                <fullName>firstName</fullName>
            </value>
            <value>
                <fullName>fullName</fullName>
            </value>
            <value>
                <fullName>gender</fullName>
            </value>
            <value>
                <fullName>id</fullName>
            </value>
            <value>
                <fullName>isEmailPrivate</fullName>
                <isActive>false</isActive>
                <label>isEmailPrivate</label>
            </value>
            <value>
                <fullName>isEmailVerified</fullName>
                <isActive>false</isActive>
                <label>isEmailVerified</label>
            </value>
            <value>
                <fullName>lastName</fullName>
            </value>
            <value>
                <fullName>link</fullName>
            </value>
            <value>
                <fullName>locale</fullName>
            </value>
            <value>
                <fullName>login_international_mobile_phone</fullName>
            </value>
            <value>
                <fullName>newsletter_terms</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>phone_number</fullName>
            </value>
            <value>
                <fullName>phone_number_verified</fullName>
            </value>
            <value>
                <fullName>picture</fullName>
            </value>
            <value>
                <fullName>stiteLoginUrl</fullName>
            </value>
            <value>
                <fullName>userName</fullName>
            </value>
            <value>
                <fullName>zone_number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>