force-app/main/default/objects/IDENTITY_AuthProvider_Mapping__mdt/fields/Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>id, firstName, lastName, fullName, email, link, userName, locale, provider, siteLoginUrl</inlineHelpText>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>