force-app/main/default/objects/IDENTITY_AuthProvider_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AuthProvider__c</columns>
    <columns>MasterLabel</columns>
    <columns>Field__c</columns>
    <columns>Value__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Standard__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>